compiler/src/testsuite/extensions/modules/bad/mod.bl
int int_function(int n ) {
    return n;
}